--- a/public/global.css
+++ b/public/global.css
@@ -4,7 +4,7 @@ html{
 	display: flex;
 	flex: 1;
 	min-height: 100%;
-	font-family: "Roboto";
+	font-family: "Roboto", "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
 }
 
 body {
@@ -14,3 +14,12 @@ body {
 	margin: 0;
 }
 
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
